force-app/main/default/objects/Apprentice_WorkRS__c/Apprentice_WorkRS__c.object-meta.xml
<CustomObject>
    <label>Apprentice Work RS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apprentice Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>