force-app/main/default/objects/Apprentice_WorkRS__c/fields/AssessmentRS__c.field-meta.xml
<CustomField>
    <fullName>AssessmentRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is to be used by Leads only</inlineHelpText>
    <label>Assessment RS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>