force-app/main/default/objects/Apprentice_WorkRS__c/fields/Contacts_RS__c.field-meta.xml
<CustomField>
    <fullName>Contacts_RS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RS
Look up to show apprentice name working on assignment</description>
    <label>Contact RS</label>
    <referenceTo>ContactsRS__c</referenceTo>
    <relationshipLabel>Apprentice Work</relationshipLabel>
    <relationshipName>Apprentice_Work</relationshipName>
    <type>Lookup</type>
</CustomField>