force-app/main/default/objects/Apprentice_WorkRS__c/fields/Files_AttachmentsRS__c.field-meta.xml
<CustomField>
    <fullName>Files_AttachmentsRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Files/Attachments RS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>