force-app/main/default/objects/Apprentice_WorkRS__c/fields/Important_Tips_to_rememberRS__c.field-meta.xml
<CustomField>
    <fullName>Important_Tips_to_rememberRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Important Tips to remember RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>