force-app/main/default/objects/Apprentice_WorkRS__c/fields/Meeting_notesRS__c.field-meta.xml
<CustomField>
    <fullName>Meeting_notesRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting notes RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>