force-app/main/default/objects/Apprentice_WorkRS__c/fields/Self_AssessmentRS__c.field-meta.xml
<CustomField>
    <fullName>Self_AssessmentRS__c</fullName>
    <label>Self Assessment RS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Beginner or Not Started)</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 (Expert)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>