force-app/main/default/objects/Apprentice_WorkRS__c/fields/Speedbump_BlockerRS__c.field-meta.xml
<CustomField>
    <fullName>Speedbump_BlockerRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Speedbump/Blocker RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>