force-app/main/default/objects/Apprentice_WorkRS__c/fields/Tools_UsedRS__c.field-meta.xml
<CustomField>
    <fullName>Tools_UsedRS__c</fullName>
    <description>RS
Alphaforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tools Used RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>