force-app/main/default/objects/Apprentice_WorkRS__c/fields/What_do_I_NeedRS__c.field-meta.xml
<CustomField>
    <fullName>What_do_I_NeedRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What do I Need? RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>