force-app/main/default/objects/Apprentice_WorkRS__c/fields/What_was_impact_on_GroupRS__c.field-meta.xml
<CustomField>
    <fullName>What_was_impact_on_GroupRS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What was impact on Group? RS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>